# TurboQuantX1

./: .gitignore  .markdownlint.json  MANIFEST.in  Makefile  README.md  RELEASE_CANDIDATE_NOTES.md  VENDORED_MLX_LM.md  conftest.py  fix2.py  noxfile.py  patch_attention.py  patch_attn_mask.py  patch_cache.py  patch_compare.py  patch_gen2.py  patch_kv.py  patch_qjl.py  patch_score.py  patch_tests.py  patch_turbo_attn.py  patch_up.py  pyproject.toml  result.txt  rewrite_turboquant.py  run_all.sh  sync.py  upgrade_qjl.py
.claude/: ecc-tools.json  identity.json
.claude/commands/: benchmark-script-update.md  config-schema-update.md  refactoring.md
.codex/: AGENTS.md
.github/workflows/: apple-runtime-cert.yml  release.yml  static-ci.yml
benchmarks/exploratory/: b  bench_decode_step.py  bench_decode_streaming.py  bench_dense_vs_turboquant.py  bench_k_encode.py  bench_memory.py  bench_memory_footprint.py  decode_latency.py  run_final_eval.py
benchmarks/runtime_cert/: __init__.py  collect_metrics.py  run_dense_vs_tq.py  run_quality_eval.py  utils.py
docs/: architecture.md  benchmark_methodology.md  cache-format.md  evaluation.md  integration.md  release-checklist.md  runtime-certification.md  runtime_certification.md  support_matrix.md  supported-surface.md  validation-local.md  vendored-upstream-boundary.md
docs/archive/: legacy-design-notes.md
docs/history/: PACKAGING_HARDENING_NOTES.md  PATCH_DIFF_SUMMARY.txt  PATCH_NOTES_BLOCKER_FIXES.md
integrations/mlx/: cache_adapter.py  upgrade.py
mlx_lm/: benchmark.py  convert.py  evaluate.py  generate.py  gguf.py  lora.py  manage.py  perplexity.py  sample_utils.py  server.py  tokenizer_utils.py  utils.py
mlx_lm/models/: Klear.py  afm7.py  afmoe.py  apertus.py  baichuan_m1.py  bailing_moe.py  bailing_moe_linear.py  base.py  bitlinear_layers.py  bitnet.py  cache.py  cohere2.py  dbrx.py  deepseek.py  deepseek_v2.py  deepseek_v3.py  deepseek_v32.py  dots1.py  exaone.py  exaone4.py  falcon_h1.py  gated_delta.py  gemma.py  gemma3_text.py  gemma3n.py  glm.py  glm4_moe.py  gpt_oss.py  granite.py  granitemoe.py  granitemoehybrid.py  hunyuan.py  internlm2.py  (+38 more)
scripts/: benchmark.py  certify_apple_runtime.sh  preflight.py  run_benchmarks.sh  validate_apple_silicon.sh  validate_local.sh  write_cert_manifest.py
tests/: conftest.py
tools/: audit_vendored_manifest.py  audit_vendored_surface.py
turboquant/: __init__.py  _deps.py  config.py  errors.py
(+87 files in other folders)
